# GPPCPP

./: CMakeLists.txt  README.md
TestTask/: CMakeLists.txt  main.cpp
src/: chapter12_example1.cpp  chapter12_example2.cpp  chapter12_example3.cpp  chapter13_example1.cpp  chapter15example1.cpp  chapter15example2.cpp  chapter15example3.cpp
src/PPP2code/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Simple_window.cpp  Simple_window.h  Window.cpp  Window.h
