cmake_minimum_required(VERSION 3.0)
project(TT)
set(CMAKE_CXX_STANDARD  11)
add_executable(TT main.cpp)
set(FLTK_SKIP_OPENGL ON)
set(FLTK_SKIP_FLUID ON)
FIND_PACKAGE(FLTK REQUIRED)
include_directories(${FLTK_INCLUDE})
target_link_libraries(TT ${FLTK_LIBRARIES})
if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    target_link_libraries(TT dl png z pthread Xinerama Xfixes Xcursor Xft Xrender fontconfig jpeg)
endif()
