cmake_minimum_required(VERSION 3.0)
project(TT)
set(CMAKE_CXX_STANDARD  11)
add_executable(TT main.cpp)
set(FLTK_SKIP_OPENGL ON)
set(FLTK_SKIP_FLUID ON)
FIND_PACKAGE(FLTK REQUIRED)
include_directories(${FLTK_INCLUDE_DIR})
if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
		target_link_libraries(TT ${CMAKE_SOURCE_DIR}/Libs/Debug/fltkd.lib)
endif()
if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
		target_link_libraries(TT ${FLTK_LIBRARIES})
    target_link_libraries(TT dl png z pthread Xinerama Xfixes Xcursor Xft Xrender fontconfig jpeg)
endif()
